fixing line height on mobile for portfolio item descriptions

--- a/src/component/PortfolioItemInfo.css
+++ b/src/component/PortfolioItemInfo.css
@@ -131,6 +131,7 @@
     flex-direction: column;
     align-items: start;
     justify-content: start;
+    line-height: 24px;
   }
 
   .portfolio-info-scroll-indicator {
